# dwl

./: .gitignore  CLAUDE.md  Makefile  README.md  client.h  config.def.h  config.mk  config.toml.example  config.toml.simple  config_parser.c  config_parser.h  dwl.1  dwl.c  dwl.desktop  dwlctl.1  flake.nix  input.c  input.h  macwc.1  macwc.desktop  meson.build  meson_options.txt  monitor.c  pointer.c  swl.1  swl.desktop  visual.c
.gitea/issue_template/: bug_report.yml
config/: config
include/: client.h  compositor.h  config.h  error.h  events.h  input.h  ipc.h  keybindings.h  layer.h  layout.h  monitor.h  render.h  rules.h  scene.h  session_lock.h  toplevel.h  workspace.h  xwayland.h
nix/: default.nix  module.nix
src/: client.h  client_funcs.c  client_funcs.h  config.def.h  config_parser.c  config_parser.h  dwl.c  dwl.h  dwlctl.c  input.c  input.h  ipc.c  ipc.h  layout.c  layout.h  macwc.c  macwc.h  macwcctl.c  main.c  monitor.c  monitor.h  pointer.c  pointer.h  session.c  session.h  visual.c  visual.h
src/client/: client.c  client_internal.h  client_x11.c  rules.c
src/config/: config.c
src/core/: compositor.c  error.c  events.c  signal.c
src/input/: input.c  input_internal.h  keybindings.c  keyboard.c  pointer.c  switch.c
src/ipc/: commands.c  ipc.c  ipc_internal.h  socket.c
src/layer/: layer.c
src/layout/: floating.c  monocle.c  registry.c  scroller.c  tile.c
src/output/: monitor.c
src/protocols/: decoration.c  decoration.h  session_lock.c  xdg_shell.c  xdg_shell.h
src/render/: renderer.c  scene.c
src/toplevel/: toplevel.c
src/workspace/: workspace.c
src/xwayland/: xwayland.c
tests/: meson.build
tests/mocks/: client_stubs.c
tests/unit/: test_config.c  test_events.c  test_layout.c  test_rules.c
tools/: dwlctl.c  swlctl.c
